--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,59 @@
 body {
   height: 500vh;
+  background-color: black;
 }
 
-img {
-  height: 15vh;
+.navbar {
+  height: 10vh;
+}
+
+.navbar a {
+  height: 100%;
+}
+
+.navbar img {
+  height: 90%;
 }
 
 .collapse {
-  color: rgb(5, 50, 255);
+  height: 100%;
 }
 
-.carousel {
-  height: 100vh;
+.social-media {
+  height: 100%;
+}
+
+section.carousel {
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+  max-height: 90vh;
+  margin-top: 10vh;
+  overflow: hidden;
+}
+
+.carousel-inner {
+  margin-top: 0;
+}
+
+.carousel-item {
+  background-color: black;
 }
 
 .carousel-item img {
   width: 100%;
   height: auto;
-}/*# sourceMappingURL=style.css.map */
+  opacity: 0.6;
+}
+
+.carousel-caption {
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.slide {
+  max-height: 90vh;
+}
+/*# sourceMappingURL=style.css.map */
