--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@ body {
 }
 
 .navbar {
-  height: 10vh;
+  height: 20vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(#1c9cd8), to(#010101));
+  background: linear-gradient(180deg, #1c9cd8 0%, #010101 100%);
 }
 
 .navbar a {
-  height: 100%;
+  height: 90%;
 }
 
 .navbar img {
@@ -23,37 +25,120 @@ body {
   height: 100%;
 }
 
-section.carousel {
-  max-width: 800px;
-  margin-right: auto;
-  margin-left: auto;
-  max-height: 90vh;
-  margin-top: 10vh;
-  overflow: hidden;
-}
-
-.carousel-inner {
-  margin-top: 0;
-}
-
-.carousel-item {
-  background-color: black;
-}
-
-.carousel-item img {
-  width: 100%;
-  height: auto;
-  opacity: 0.6;
-}
-
-.carousel-caption {
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+.slider {
+  height: calc(100vh - 20vh);
+  position: relative;
+  color: white;
+  padding-top: 20vh;
 }
 
 .slide {
-  max-height: 90vh;
+  position: absolute;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 5vh 2vw 3vh;
+}
+
+.slide p {
+  display: block;
+}
+
+.slideImg > div > div {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.slideImg {
+  min-width: 500px;
+  background-color: #1c9cd8;
+  position: relative;
+}
+
+#slide1Img {
+  -webkit-clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+          clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+}
+
+#slide2Img {
+  -webkit-clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+          clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+
+#slide3Img {
+  -webkit-clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+          clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+}
+
+#slide1Img > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-color: white;
+  -webkit-clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+          clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+}
+
+#slide2Img > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-color: #1c9cd8;
+  -webkit-clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+          clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+
+#slide3Img > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-color: #1c9cd8;
+  -webkit-clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+          clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+}
+
+#slide1Img > div > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-image: url(/img/carouselv1.jpg);
+  -webkit-clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+          clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+}
+
+#slide2Img > div > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-image: url(/img/carouselv2.jpg);
+  -webkit-clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+          clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+
+#slide3Img > div > div {
+  height: calc(100% - 10px);
+  width: calc(100% - 10px);
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-image: url(/img/carouselv3.jpg);
+  -webkit-clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+          clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
 }
 /*# sourceMappingURL=style.css.map */
