--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,10 @@
-:root {
+
 $main-blue: rgb(28,156,216);
 $main-dark-grey: rgb(26,26,26);
 $main-bright-grey: rgb(230,230,230);
-}
+
+
+// navbar
 
 
 body {
@@ -10,12 +12,13 @@ body {
     background-color: black;
 }
 
+$navbarHeight: 20vh;
 .navbar {
-    height: 10vh;
+    height: $navbarHeight;
+    background: linear-gradient(180deg, rgba(28,156,216,1) 0%, rgba(1,1,1,1) 100%);
 }
-
 .navbar a {
-    height: 100%;
+    height: 90%;
 }
 
 .navbar img {
@@ -32,36 +35,114 @@ body {
     height: 100%;
 }
 
-section.carousel {
-    max-width: 800px;
-    margin-right: auto;
-    margin-left: auto;
-    max-height: 90vh;
-    margin-top: 10vh;
-    overflow: hidden;
-}
 
-.carousel-inner {
-    margin-top: 0;
-}
+// slider
 
-.carousel-item {
-    background-color: black;
-}
-
-.carousel-item img {
-    width: 100%;
-    height: auto;
-    opacity: 0.6;
-}
-
-
-.carousel-caption {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.slider {
+    height: calc(100vh - #{$navbarHeight});
+    position: relative;
+    color: white;
+    padding-top: $navbarHeight;
 }
 
 .slide {
-    max-height: 90vh;
+    position: absolute;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 5vh 2vw 3vh;
+
+    p {
+        display: block;
+    }
+
 }
+
+
+.slideImg>div>div {
+    
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;  
+}
+
+$slideImgHeight: 90%;
+
+
+
+.slideImg {
+    min-width: 500px;
+    background-color: $main-blue;
+    position: relative;
+}
+#slide1Img {
+    clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);   
+}
+#slide2Img {
+    clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+#slide3Img {
+    clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+}
+#slide1Img>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: white;
+    clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);   
+}
+#slide2Img>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: $main-blue;
+    clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+#slide3Img>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: $main-blue;
+    clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+}
+
+#slide1Img>div>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-image: url(/img/carouselv1.jpg);
+    clip-path: polygon(50% 0%, 100% 31%, 80% 79%, 19% 94%, 3% 22%);
+    
+}
+#slide2Img>div>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-image: url(/img/carouselv2.jpg);
+    clip-path: polygon(39% 23%, 100% 20%, 87% 86%, 14% 93%, 3% 49%);
+}
+#slide3Img>div>div {
+    height: calc(100% - 10px);
+    width: calc(100% - 10px);
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-image: url(/img/carouselv3.jpg);
+    clip-path: polygon(3% 9%, 63% 7%, 96% 39%, 93% 96%, 15% 86%);
+}
+
+
+
+
+
