--- a/css/style.scss
+++ b/css/style.scss
@@ -15,14 +15,27 @@ $navbarHeight: 20vh;
     font: inherit;
 }
 
+ul {
+    list-style: none;
+}
+
 html {
     scroll-behavior: smooth;
+}
+
+.displayNone {
+    display: none;
 }
 
 body {
     height: 500vh;
     background: $main-dark-grey;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
+}
+
+.longText {
+    line-height: 180%;
 }
 
 .navbar {
@@ -145,7 +158,7 @@ body {
     margin: 0 auto;
     opacity: 0;
     transition: 0.3s;
-    
+
 
     p {
         display: block;
@@ -212,7 +225,7 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
 
 #slide2Img {
     clip-path: $slideImgClipPath2;
-}   
+}
 
 #slide3Img {
     clip-path: $slideImgClipPath3;
@@ -245,7 +258,8 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
     top: 5px;
     left: 5px;
     background-color: white;
-    clip-path: $slideImgClipPath3;;
+    clip-path: $slideImgClipPath3;
+    ;
 }
 
 #slide1Img>div>div {
@@ -369,7 +383,6 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
     width: fit-content;
     line-height: 0.8;
     margin-bottom: 1.3rem;
-    display: block;
     padding-bottom: 1.3rem;
     border-bottom: 0.5rem solid $main-blue;
 }
@@ -378,6 +391,11 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
 
     .oNas {
         height: auto;
+
+        .sectionTitle {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     .oNasBcg {
@@ -390,3 +408,234 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
         padding: 4rem 2rem;
     }
 }
+
+.services {
+    color: white;
+
+    .sectionTitle {
+        margin: 3rem auto;
+    }
+
+    .row>* {
+        padding: 0;
+    }
+
+    .service .wrap {
+        background-color: $main-blue;
+        // border: 3px solid white;
+        // padding: 1rem;
+        height: 20rem;
+        overflow: hidden;
+
+    }
+
+    .service:hover {
+
+        .serviceBcg {
+            transform: scale(110%);
+
+            h2 {
+                transform: translate(-50%, -50%)  scale(91%);
+            }
+        }
+
+
+
+
+    }
+
+
+    .serviceBcg {
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 1rem;
+        position: relative;
+        transition: 0.3s;
+        cursor: pointer;
+
+        h2 {
+            font-size: 1.8rem;
+            margin: 1rem 1rem 2rem;
+            position: absolute;
+            z-index: 2;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: 0.3s;
+        }
+
+        &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(90, 90, 90, 0.6);
+        }
+    }
+
+
+    #serviceBcg1 {
+        background-image: url(../img/service1s.jpg)
+    }
+
+    #serviceBcg2 {
+        background-image: url(../img/service2s.jpg);
+    }
+
+    #serviceBcg3 {
+        background-image: url(../img/service3s.jpg);
+    }
+
+    #serviceBcg4 {
+        background-image: url(../img/service4s.jpg);
+    }
+
+    #serviceBcg5 {
+        background-image: url(../img/service5s.jpg);
+    }
+
+    #serviceBcg6 {
+        background-image: url(../img/service6s.jpg);
+    }
+
+
+}
+
+.servicesPopupWrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 3;
+    color: white;
+
+    .servicesPopup {
+        position: absolute;
+        top: 10%;
+        left: 25%;
+        width: 50%;
+        // min-height: 70vh;
+        background-color: $main-dark-grey;
+        z-index: 4;
+        padding: 2rem;;
+        border-radius: 1%;
+        box-shadow: 0px 0px 28px -9px rgba(0, 0, 0, 1);
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-around;
+
+
+        h1 {
+            text-align: center;
+            color: $main-blue;
+            margin-bottom: 3rem;
+        }  
+        
+        .description {
+            margin-bottom: 3rem;
+        }
+        
+        .popupPricing {
+
+            width: 80%;
+            margin: 0 auto;
+
+            display: grid;
+            align-items: center;
+            justify-items: center;
+            justify-content: space-around;
+            gap: 1rem;
+
+            p {
+                margin-bottom: 0;
+             }
+
+             span {
+                width: 100%;
+                height: 2px;
+                background-color: $main-blue;
+        
+            }
+
+            .serviceName {
+                font-weight: bold; 
+            }
+
+            
+
+        }
+            
+
+        
+        
+    }
+    
+
+
+}
+
+#popupService1 .popupPricing {
+
+    
+    grid-template-columns: auto 3rem auto;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "s1 span1  price1"
+    "s2 span2  price2"
+    "s3 span3  price3"
+    ;  
+    
+    
+.s1 {
+    grid-area: s1;
+}
+.span1 {
+    grid-area: span1;
+}
+.price1 {
+    grid-area: price1;
+}
+.s2 {
+    grid-area: s2;
+}
+.span2 {
+    grid-area: span2;
+}
+.price2 {
+    grid-area: price2;
+}
+.s3 {
+    grid-area: s3;
+}
+.span3 {
+    grid-area: span3;
+}
+.type1 {
+    grid-area: type1;
+}
+.price3 {
+    grid-area: price3;
+}
+.type2 {
+    grid-area: type2;
+}
+.price4 {
+    grid-area: price4;
+}
+.type3 {
+    grid-area: type3;
+}
+.price5 {
+    grid-area: price5;
+}
+    
+}
+
+
